{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 36,
  "lineage": "0308719b-5827-8dfa-a729-24c1017d866d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kops-infordigi-tk",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-01637849dd5fff2c0",
            "owner_id": "256708076741",
            "tags": {
              "KubernetesCluster": "kops.infordigi.tk",
              "Name": "kops.infordigi.tk",
              "kubernetes.io/cluster/kops.infordigi.tk": "owned"
            },
            "vpc_id": "vpc-032bf91ae01f3bfb5"
          },
          "dependencies": [
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01637849dd5fff2c0",
            "id": "r-rtb-05b72d1b5875d9dfd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05b72d1b5875d9dfd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.kops-infordigi-tk",
            "aws_route_table.kops-infordigi-tk",
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kops-infordigi-tk",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05b72d1b5875d9dfd",
            "owner_id": "256708076741",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "KubernetesCluster": "kops.infordigi.tk",
              "Name": "kops.infordigi.tk",
              "kubernetes.io/cluster/kops.infordigi.tk": "owned",
              "kubernetes.io/kops/role": "public"
            },
            "vpc_id": "vpc-032bf91ae01f3bfb5"
          },
          "dependencies": [
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-2a-kops-infordigi-tk",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0927ca2f830e77ff9",
            "route_table_id": "rtb-05b72d1b5875d9dfd",
            "subnet_id": "subnet-01a99fc5f01379596"
          },
          "dependencies": [
            "aws_route_table.kops-infordigi-tk",
            "aws_subnet.us-east-2a-kops-infordigi-tk",
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "masters-kops-infordigi-tk",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256708076741:security-group/sg-07297f05532a23874",
            "description": "Security group for masters",
            "egress": [],
            "id": "sg-07297f05532a23874",
            "ingress": [],
            "name": "masters.kops.infordigi.tk",
            "name_prefix": null,
            "owner_id": "256708076741",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "kops.infordigi.tk",
              "Name": "masters.kops.infordigi.tk",
              "kubernetes.io/cluster/kops.infordigi.tk": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-032bf91ae01f3bfb5"
          },
          "dependencies": [
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes-kops-infordigi-tk",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256708076741:security-group/sg-0a7346c398bde927f",
            "description": "Security group for nodes",
            "egress": [],
            "id": "sg-0a7346c398bde927f",
            "ingress": [],
            "name": "nodes.kops.infordigi.tk",
            "name_prefix": null,
            "owner_id": "256708076741",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "kops.infordigi.tk",
              "Name": "nodes.kops.infordigi.tk",
              "kubernetes.io/cluster/kops.infordigi.tk": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-032bf91ae01f3bfb5"
          },
          "dependencies": [
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-master-to-master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3384461410",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07297f05532a23874",
            "self": false,
            "source_security_group_id": "sg-07297f05532a23874",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-infordigi-tk",
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-master-to-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-453521963",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a7346c398bde927f",
            "self": false,
            "source_security_group_id": "sg-07297f05532a23874",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-infordigi-tk",
            "aws_security_group.nodes-kops-infordigi-tk",
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-node-to-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1181064143",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a7346c398bde927f",
            "self": false,
            "source_security_group_id": "sg-0a7346c398bde927f",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nodes-kops-infordigi-tk",
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https-external-to-master-0-0-0-0--0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3273602835",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07297f05532a23874",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-infordigi-tk",
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4185543913",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07297f05532a23874",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-infordigi-tk",
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1256792858",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a7346c398bde927f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.nodes-kops-infordigi-tk",
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-1-2379",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1,
            "id": "sgrule-364472635",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07297f05532a23874",
            "self": false,
            "source_security_group_id": "sg-0a7346c398bde927f",
            "to_port": 2379,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-infordigi-tk",
            "aws_security_group.nodes-kops-infordigi-tk",
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-2382-4000",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2382,
            "id": "sgrule-1714128872",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07297f05532a23874",
            "self": false,
            "source_security_group_id": "sg-0a7346c398bde927f",
            "to_port": 4000,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-infordigi-tk",
            "aws_security_group.nodes-kops-infordigi-tk",
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-4003-65535",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4003,
            "id": "sgrule-3884050657",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07297f05532a23874",
            "self": false,
            "source_security_group_id": "sg-0a7346c398bde927f",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-infordigi-tk",
            "aws_security_group.nodes-kops-infordigi-tk",
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-udp-1-65535",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1,
            "id": "sgrule-1698753617",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-07297f05532a23874",
            "self": false,
            "source_security_group_id": "sg-0a7346c398bde927f",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-infordigi-tk",
            "aws_security_group.nodes-kops-infordigi-tk",
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-external-to-master-0-0-0-0--0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3922851563",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07297f05532a23874",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-infordigi-tk",
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-external-to-node-0-0-0-0--0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2104434126",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a7346c398bde927f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nodes-kops-infordigi-tk",
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-2a-kops-infordigi-tk",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256708076741:subnet/subnet-01a99fc5f01379596",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.20.32.0/19",
            "id": "subnet-01a99fc5f01379596",
            "map_public_ip_on_launch": false,
            "owner_id": "256708076741",
            "tags": {
              "KubernetesCluster": "kops.infordigi.tk",
              "Name": "us-east-2a.kops.infordigi.tk",
              "SubnetType": "Public",
              "kubernetes.io/cluster/kops.infordigi.tk": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-032bf91ae01f3bfb5"
          },
          "dependencies": [
            "aws_vpc.kops-infordigi-tk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kops-infordigi-tk",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:256708076741:vpc/vpc-032bf91ae01f3bfb5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-098cc44eba481dbde",
            "default_route_table_id": "rtb-064c9391b7a1fa70d",
            "default_security_group_id": "sg-081bdf41854bf10a5",
            "dhcp_options_id": "dopt-df70d0b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-032bf91ae01f3bfb5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-064c9391b7a1fa70d",
            "owner_id": "256708076741",
            "tags": {
              "KubernetesCluster": "kops.infordigi.tk",
              "Name": "kops.infordigi.tk",
              "kubernetes.io/cluster/kops.infordigi.tk": "owned"
            }
          }
        }
      ]
    }
  ]
}